cleanup request/response dto names + start with search functionality
