# data-service-backend/src/main/java/ch/akros/marketplace/controller/SearchTopicController.java
@@ -1,30 +1,33 @@
 
 package ch.akros.marketplace.controller;
 
+import java.util.List;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 
-import ch.akros.marketplace.api.SaveTopicApi;
-import ch.akros.marketplace.api.model.TopicStoreRequestDTO;
+import ch.akros.marketplace.api.SearchTopicApi;
+import ch.akros.marketplace.api.model.TopicSearchFieldTypeValuesRequestDTO;
+import ch.akros.marketplace.api.model.TopicSearchListResponseDTO;
 import ch.akros.marketplace.service.TopicService;
 import lombok.extern.slf4j.Slf4j;
 
 @RestController
 @CrossOrigin(origins = "*", allowedHeaders = "*")
 @Slf4j
-public class SaveTopicController implements SaveTopicApi {
+public class SearchTopicController implements SearchTopicApi {
   @Autowired
   private TopicService topicService;
 
   @Override
-  public ResponseEntity<Void> saveTopicPost(TopicStoreRequestDTO topicStoreRequestDTO) {
+  public ResponseEntity<TopicSearchListResponseDTO> searchTopicPost(List<TopicSearchFieldTypeValuesRequestDTO> topicSearchFieldTypeValuesRequestDTO) {
     try {
       log.debug("SaveTopicController.saveTopicPost() called");
 
-      topicService.storeTopic(topicStoreRequestDTO);
+      TopicSearchListResponseDTO topicSearchListResponseDTO = topicService.searchTopic(topicSearchFieldTypeValuesRequestDTO);
       return ResponseEntity.status(HttpStatus.OK).body(null);
     }
     catch (Exception ex) {
