# data-service-backend/src/main/java/ch/akros/marketplace/entity/FieldTypeChoose.java
@@ -1,3 +1,4 @@
+
 package ch.akros.marketplace.entity;
 
 import javax.persistence.Column;
@@ -26,19 +27,20 @@ import lombok.ToString;
 @ToString
 @Table(name = "FIELD_TYPE_CHOOSE")
 public class FieldTypeChoose {
-	@Id
-	@Column(name = "FIELD_TYPE_CHOOSE_ID", nullable = false, unique = true)
-	@GeneratedValue(strategy = GenerationType.IDENTITY)
-	private Long fieldTypeChooseId;
+  @Id
+  @Column(name = "FIELD_TYPE_CHOOSE_ID", nullable = false, unique = true)
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Long      fieldTypeChooseId;
 
-	@Column(name = "DESCRIPTION")
-	private String description;
+  @Column(name = "DESCRIPTION")
+  private String    description;
 
-	@Column(name = "SORT_NUMBER")
-	private int sortNumber;
+  @Column(name = "SORT_NUMBER")
+  private int       sortNumber;
 
-	@ManyToOne
-	@ToString.Exclude
-	@JoinColumn(referencedColumnName = "FIELD_TYPE_ID", name = "FIELD_TYPE_ID", foreignKey = @ForeignKey(name = "FIELD_TYPE_CHOOSE_FIELD_TYPE_FK"))
-	private FieldType fieldType;
+  @ManyToOne
+  @ToString.Exclude
+  @JoinColumn(referencedColumnName = "FIELD_TYPE_ID", name = "FIELD_TYPE_ID",
+      foreignKey = @ForeignKey(name = "FIELD_TYPE_CHOOSE_FIELD_TYPE_FK"))
+  private FieldType fieldType;
 }
